--- a/image-store-sql/src/main/resources/application.properties
+++ b/image-store-sql/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=test
 
-spring.h2.console.enabled=true
-spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:~/image_store
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/image_store
+spring.datasource.username=root
+spring.datasource.password=root1234
