--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     services:
         mysql:
-            image: mysql:5.7
+            image: mysql:8.0
             env:
                 MYSQL_ALLOW_EMPTY_PASSWORD: yes
-                MYSQL_DATABASE: test
+                MYSQL_DATABASE: test_store
             ports:
-                - 3306
+                - 3306:3306
             options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - name: Checkout
