--- a/image-store-sql/src/main/resources/application-ci.properties
+++ b/image-store-sql/src/main/resources/application-ci.properties
@@ -2,4 +2,4 @@ server.address=0.0.0.0
 server.port=1337
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test_store
