--- a/image-store-sql/pom.xml
+++ b/image-store-sql/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.vartdalen.imagestoresql</groupId>
+    <groupId>com.vartdalen</groupId>
     <artifactId>image-store-sql</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
@@ -56,9 +56,8 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 
