--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,15 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    services:
+        mysql:
+            image: mysql:8.0
+            env:
+                MYSQL_ALLOW_EMPTY_PASSWORD: yes
+                MYSQL_DATABASE: test_store
+            ports:
+                - 3306:3306
+            options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -18,7 +27,7 @@ jobs:
           java-version: 11.0.6
           architecture: x64
       - name: Maven package
-        run: mvn -B package --file ./image-store-sql/pom.xml
+        run: mvn -B package -Dspring.profiles.active=ci --file ./image-store-sql/pom.xml
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
