--- a/image-store-sql/src/main/resources/application-ci.properties
+++ b/image-store-sql/src/main/resources/application-ci.properties
@@ -1,6 +1,5 @@
 server.address=0.0.0.0
-server.port=8081
+server.port=1337
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:0.0.0.0}:3306/image_store
-spring.datasource.password=root1234
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/test_store
