--- a/image-store-sql/src/main/resources/application-test.properties
+++ b/image-store-sql/src/main/resources/application-test.properties
@@ -1,2 +1,6 @@
 server.address=0.0.0.0
 server.port=8763
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/image_store
+spring.datasource.password=root1234
