--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
       - name: Docker build
-        run: docker buildx build --platform linux/amd64,linux/arm64 -t vartdalen/image-store-sql:latest ./image-store-sql/.
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t imagestoreorg/image-store-sql:latest -t vartdalen/image-store-sql:latest ./image-store-sql/.
         if: ${{ !(github.event_name == 'push' && github.ref == 'refs/heads/master') }}
       - name: Docker build and push
-        run: docker buildx build --platform linux/amd64,linux/arm64 -t vartdalen/image-store-sql:latest ./image-store-sql/. --push
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t imagestoreorg/image-store-sql:latest -t vartdalen/image-store-sql:latest ./image-store-sql/. --push
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
