--- a/image-store-sql/src/main/resources/application.properties
+++ b/image-store-sql/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.profiles.active=test
 spring.datasource.username=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
